// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/custom-field-input-date/custom-field-input-date className API sets the input class name 1`] = `
<body>
  <div>
    <div
      role="presentation"
    >
      <div
        class="label-wrapper"
      >
        <div
          class="label"
        >
          <label
            for="field-date"
            id="field-date-label"
          >
            Field Date
          </label>
        </div>
      </div>
      <div
        class="control-container"
      >
        <div
          style="height: 100%; position: relative;"
        >
          <input
            aria-describedby="field-dateHint field-date-tooltip"
            class="unique-input"
            id="field-date"
            name="field-name"
            type="text"
            value=""
          />
          <div
            class="container"
          >
            <svg
              aria-disabled="false"
              class="button"
              height="14"
              role="button"
              tabindex="0"
              width="11"
            >
              <title>
                calendar button
              </title>
              <use
                xlink:href="#calendar.svg"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`src/components/custom-field-input-date/custom-field-input-date has defaults 1`] = `
<body>
  <div>
    <div
      role="presentation"
    >
      <div
        class="label-wrapper"
      >
        <div
          class="label"
        >
          <label
            for="field-date"
            id="field-date-label"
          >
            Field Date
          </label>
        </div>
      </div>
      <div
        class="control-container"
      >
        <div
          style="height: 100%; position: relative;"
        >
          <input
            aria-describedby="field-dateHint field-date-tooltip"
            class="input"
            id="field-date"
            name="field-name"
            type="text"
            value=""
          />
          <div
            class="container"
          >
            <svg
              aria-disabled="false"
              class="button"
              height="14"
              role="button"
              tabindex="0"
              width="11"
            >
              <title>
                calendar button
              </title>
              <use
                xlink:href="#calendar.svg"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`src/components/custom-field-input-date/custom-field-input-date has defaults 2`] = `
Object {
  "contains": [Function],
  "dirty": false,
  "id": "field-date",
  "name": "field-name",
  "value": undefined,
}
`;
